# verryte

./: .gitignore  AGENTS.md  Cargo.toml  GOAL.md  Makefile  README.md  WORKLOG.md
crates/verryte-core/: Cargo.toml
crates/verryte-core/src/: clock.rs  diagnostics.rs  entity.rs  event.rs  lib.rs  log.rs  rng.rs  schedule.rs  tag.rs  world.rs
crates/verryte-input/: Cargo.toml
crates/verryte-input/src/: lib.rs
crates/verryte-map/: Cargo.toml
crates/verryte-map/src/: lib.rs
crates/verryte-terminal/: Cargo.toml
crates/verryte-terminal/src/: lib.rs  vfx.rs
crates/verryte-tty/: Cargo.toml
crates/verryte-tty/src/: lib.rs
prompt/: 00-project-context.md  01-architecture-pass.md  02-implement-next-slice.md  03-input-control-contract.md  04-modularity-pass.md  05-testing-and-harness.md  06-review-and-harden.md  07-docs-sync.md  08-fresh-session-bootstrap.md  09-autonomous-engine-run.md  10-tactical-rpg.md  README.md
prototype/ash-courier/: Cargo.toml  README.md
prototype/ash-courier/src/: action.rs  components.rs  game.rs  lib.rs  map.rs  snapshot.rs  systems.rs
prototype/vfx-demo/: Cargo.toml
prototype/vfx-demo/src/: main.rs
prototype/wuthering-terminal/: Cargo.toml  GOAL.md
prototype/wuthering-terminal/src/: action.rs  components.rs  game.rs  lib.rs  main.rs  map.rs  snapshot.rs  systems.rs
scratch/: png_to_ansi.py  test_adaptive_res.py  test_all_sprites.py  visualize_4x4.py  visualize_highres.py
