[workspace]
resolver = "2"
members = [
    "crates/verryte-core",
    "crates/verryte-input",
    "crates/verryte-map",
    "crates/verryte-terminal",
    "crates/verryte-tty",
    "prototype/ash-courier",
    "prototype/vfx-demo",
    "prototype/wuthering-terminal",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/verryte"

[workspace.lints.rust]
unsafe_code = "forbid"
