[package]
name = "verryte-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core ECS/world/resource/event/schedule primitives for the Verryte terminal game engine."

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
