[package]
name = "verryte-input"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal-agnostic input model: keys, bindings, action queue. The shared path for interactive, scripted, and agent-driven control."

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
