[package]
name = "verryte-map"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Map and spatial primitives for terminal-native Verryte games."

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
verryte-core = { path = "../verryte-core" }

[lints]
workspace = true
