[package]
name = "verryte-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal-cell primitives for Verryte: Color, Cell, Grid, layered composition, plain renderer."

[lints]
workspace = true

[dependencies]
image = "0.24"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
