[package]
name = "verryte-tty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TTY frontend for Verryte: crossterm-based rendering and input capture."

[dependencies]
verryte-terminal = { path = "../verryte-terminal" }
verryte-input = { path = "../verryte-input" }
crossterm = "0.28"

[lints]
workspace = true