[package]
name = "vfx-demo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal VFX demo: particles, screen shake, flash, floating text."

[[bin]]
name = "vfx-demo"
path = "src/main.rs"

[dependencies]
verryte-terminal = { path = "../../crates/verryte-terminal" }
verryte-tty = { path = "../../crates/verryte-tty" }
image = "0.24"

[lints]
workspace = true
