[package]
name = "wuthering-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Turn-based tactical RPG prototype for the Verryte engine."

[lib]
path = "src/lib.rs"

[[bin]]
name = "wuthering-terminal"
path = "src/main.rs"

[dependencies]
verryte-core = { path = "../../crates/verryte-core", features = ["serde"] }
verryte-input = { path = "../../crates/verryte-input", features = ["serde"] }
verryte-map = { path = "../../crates/verryte-map", features = ["serde"] }
verryte-terminal = { path = "../../crates/verryte-terminal", features = ["serde"] }
verryte-tty = { path = "../../crates/verryte-tty" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"

[lints]
workspace = true
